--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "inngest": "^3.32.2",
     "lucide-react": "^0.477.0",
+    "motion": "^12.4.10",
     "next": "15.2.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
