--- a/package.json
+++ b/package.json
@@ -25,15 +25,20 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.3",
     "@uiw/react-md-editor": "^4.0.5",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "html2pdf.js": "^0.9.3",
+    "html2pdf.js": "^0.9.0",
     "inngest": "^3.32.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.477.0",
+    "markdown-it": "^14.1.0",
     "motion": "^12.4.10",
     "next": "15.2.1",
     "next-themes": "^0.4.4",
+    "postcss": "^8.5.3",
+    "postcss-preset-env": "^10.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -50,6 +55,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "prisma": "^6.4.1",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.6"
   }
 }
